tdf#105215 DOCX import: fix paragraph-length direct formatting

in table cells.

Paragraph-level direct character formatting (w:p/w:pPr/w:rPr)
overwrote portion formatting (w:r/w:rPr), if the same
formatting was applied on all portions of the paragraph.

Note: with this fix, portion level direct character formatting
overwrites the paragraph-level direct formatting also in the
table row inserted below the actual row, like MSO does.

Regression from commit 2ab481b038b62b1ff576ac4d49d03c1798cd7f84
(tdf#90069 DOCX: fix character style of new table rows)

See also commit 0045b6f36e5e1445d699f87a0f6597d665b4cfe4
(tdf#130690: DOCX import: fix lost text formatting in cells)

Change-Id: Ice47b93e73aed28b09334eda2f26283c68bd0bd4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/90700
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>